# RoDe

./: .gitignore  AE.md  CMakeLists.txt  README.md  eval.sh
ASpT_SDDMM_GPU/: CMakeLists.txt  bb_bin.h  bb_comput_s.h  sddmm_128.cu  sddmm_32.cu
ASpT_SpMM_GPU/: CMakeLists.txt  bb_segsort.h  dspmm_128.cu  dspmm_32.cu  preprocess.cu  sspmm_128.cu  sspmm_32.cu  test.cu
Preprocess_opt/: CMakeLists.txt  _preprocess.cu
RoDe_SDDMM/: CMakeLists.txt  RoDeSddmm.cu  RoDeSddmm.h
RoDe_SpMM/: CMakeLists.txt  RoDeSpmm.cu  RoDeSpmm.cu.bak  RoDeSpmm.cu2.bak  RoDeSpmm.h
Sputnik_SDDMM/: CMakeLists.txt  Sputnik_sddmm.cu  Sputnik_sddmm.h  all_reduce.h  compute_utils.h  dense_to_reg.h  dense_to_shared.h  output_tile.h
Sputnik_SpMM/: CMakeLists.txt  Sputnik_spmm.cu  Sputnik_spmm.h  spmm_config.h  spmm_utils.h
ablation_test/: CMakeLists.txt  sddmm_ablation.cu  spmm_ablation.cu  spmm_ablation_p1.cu  spmm_ablation_p2.cu
ae_result/: result_ASpT_sddmm_f32_n128.csv  result_ASpT_spmm_f32_n128.csv  result_ASpT_spmm_f32_n32.csv  result_ASpT_spmm_f64_n128.csv  result_ASpT_spmm_f64_n32.csv  result__sddmm_f32_n128.csv  result__spmm_f32_n32.csv  result__spmm_f64_n128.csv
cmake/: Dependencies.cmake
cuSparse_SpMM/: CMakeLists.txt  cuSPARSE_spmm.cu  cuSPARSE_spmm.h
eval/: CMakeLists.txt  eval_sddmm_f32_n128.cu  eval_sddmm_f32_n32.cu  eval_spmm_f32_n128.cu  eval_spmm_f32_n32.cu  eval_spmm_f64_n128_p1.cu  eval_spmm_f64_n128_p2.cu  eval_spmm_f64_n32.cu  get_matrix_info.cu
mat_prof/: CMakeLists.txt  mat_info_print.cu  mat_nnz_print.cu  sddmm_prof.cu  sim_run_prof.cu  spmm_prof.cu
result/: all_results.json  mat_nnz.csv  plot_sddmm_f32_n128.csv  plot_sddmm_f32_n32.csv  plot_spmm_f32_n128.csv  plot_spmm_f32_n32.csv  plot_spmm_f64_n128.csv  plot_spmm_f64_n32.csv  preprocess_eval.py  result_ASpT_sddmm_f32_n128.csv  result_ASpT_sddmm_f32_n32.csv  result_ASpT_spmm_f32_n128.csv  result_ASpT_spmm_f32_n32.csv  result_ASpT_spmm_f64_n128.csv  result_ASpT_spmm_f64_n32.csv  result__sddmm_f32_n128.csv  result__sddmm_f32_n32.csv  result__spmm_f32_n128.csv  result__spmm_f32_n32.csv  result__spmm_f64_n128.csv  result__spmm_f64_n32.csv  result_ablation_sddmm.csv  result_ablation_spmm1.csv  result_preprocess.csv  summary.py
script/: ASpT_eval.sh  Eval_SPMM.sh  _eval.sh  ablation_test.py  ablation_test.sh  ablation_test2.sh  download.py  download.sh  download2.sh  download_1.sh  download_data_small.sh  download_script.py  eval_ASpT_sddmm_f32_n128.sh  eval_ASpT_sddmm_f32_n32.sh  eval_ASpT_spmm_f32_n128.sh  eval_ASpT_spmm_f32_n32.sh  eval_ASpT_spmm_f64_n128.sh  eval_ASpT_spmm_f64_n32.sh  eval_sddmm_call.sh  eval_spmm_call.sh  eval_spmm_f64_n128.sh  get_mat_info.sh  plot_figures.py  preprocess_eval.sh  prof_kernels.sh  prof_spmm.sh  summary.py  validate.sh
utils/: CMakeLists.txt  basic_utils.h  common_utils.h  matrix_utils.cu  matrix_utils.h
